2011-07-01  Chris Kühl  <chrisk@openismus.com>

	Removed remaining viewport.h include.

	* /clutter-gtk/clutter-gtkmm.h

2011-03-07  Chris Kühl  <chrisk@openismus.com>

	[Build] Fixed build issues.

	* clutter-gtk/clutter-gtkmm/utility.[h|cc]: Removed functions no longer
	in clutter-gtkmm or moved to own object (ie. ClutterGtkTexture).
	* clutter-gtk/src/embed.hg: Changed GtkObject to GObject

2011-03-06  Chris Kühl  <chrisk@openismus.com>
	Regenerated *def files.

	* clutter-gtk/src/clutter-gtk_enums.defs
	* clutter-gtk/src/clutter-gtk_methods.defs
	* clutter-gtk/src/clutter-gtk_signals.defs
	* codegen/extradefs/generate_extra_defs_clutter_gtk.cc

2011-03-06  Chris Kühl  <chrisk@openismus.com>

	Bump version and dependencies to track clutter-gtk 0.91.8

2010-11-23  Chris Kühl  <chrisk@openismus.com>

	Removed references to *VIEWPORT and *SCROLLABLE macros in extradefs.

	* codegen/extradefs/generate_extra_defs_clutter_gtk.cc: Removed references
	to GTK_CLUTTER_TYPE_VIEWPORT and GTK_CLUTTER_TYPE_SCROLLABLE macros.

2010-11-11  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* clutter-gtk/src/viewport.[hg|ccg]: Remove Viewport, because it was removed
	from the C API. We need to wrap the new stuff, such as GtkClutterActor.

2010-11-11  Murray Cumming  <murrayc@murrayc.com>

	Use clutter-gtk-1.0 and gtkmm-3.0.

	* configure.ac: Try to use the latest versions. This doesn't build yet
	though.

2010-09-29  Chris Kühl  <chrisk@openismus.com>

	Added const version of Clutter::Gtk::Embed::get_stage()

	* clutter-gtk/src/embed.hg: added const version of get_stage()

0.9.6:

2010-05-05  Murray Cumming  <murrayc@murrayc.com>

	Updated for latest clutter-gtk.

	* configure.ac: Depend on latest clutter-gtk and cluttermm.
	* clutter-gtk/src/clutter-gtk_methods.defs: Regenerated.
	* clutter-gtk/src/embed.hg: Now derives from Gtk::Container, since it has
	changed in clutter-gtk.
	* clutter-gtk/clutter-gtkmm.h: Improved main page text.